--- a/src/app/assistant/assistant.component.html
+++ b/src/app/assistant/assistant.component.html
@@ -1,10 +1,11 @@
 <div class="row" style="margin-bottom:10px">
-	<div class="col-lg-10">
-		<p>Assstant : ko kou mane la baye</p>
-	</div>
+	
     <div class="col-lg-2">
-        <button class="btn btn-danger">deconnexion</button>   
+        <button (click)="deconnection()" class="btn btn-danger">deconnexion</button>   
     </div>
+    <div class="col-lg-10">
+		<p>compte :</p>
+	</div>
    
 </div>
 <div class="row">
