--- a/src/app/menus/menus.component.html
+++ b/src/app/menus/menus.component.html
@@ -1,6 +1,6 @@
 <ul class="list-group " id="uli">
     <li class="list-item" *ngIf="this.dashboard==true" [routerLink]="['/dashboard']"><i class="fa fa-navicon" ></i><a><b><i>DASHBOARD</i></b></a></li>
-    <li class="list-item" *ngIf="this.vente==true" [routerLink]="['/vente']"><i class="fa fa-cart-plus" ></i><a><b><i>VENTE</i></b></a></li>
+    <li class="list-item" *ngIf="this.vente==true" [routerLink]="['/caissier','vente']"><i class="fa fa-cart-plus" ></i><a><b><i>VENTE</i></b></a></li>
     <li class="list-item" *ngIf="this.histoire==true" [routerLink]="['/histoire']"><i class="fa fa-history" ></i><a><b><i>HISTORIQUE</i></b></a></li>
     <li class="list-item" *ngIf="this.profile==true" [routerLink]="['/profil']"><i class="fa fa-id-card-o" ></i><a><b><i>PROFIL</i></b></a></li>
 </ul> 
