--- a/src/app/vente/annulation/annulation.component.html
+++ b/src/app/vente/annulation/annulation.component.html
@@ -7,6 +7,7 @@
 		<input type="button" (click)="rechercheInterval()" class="btn btn-success" value="valider" />
 	</form>
 </div>
+<div>Total : {{this.totalmontanthistorique}}</div>
 <div style="margin-top:2em">
 	<table class="table table-striped table-condensed">
 		<tr>
