--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,18 +1,19 @@
-<div>
+<!--<div>
 	<button class="btn btn-success" (click)="toparticulier()">PARTICULIER</button>
 	<button class="btn btn-success" [routerLink]="['/assistant','ipm']">IPM</button>
 	<button class="btn btn-success">ASSURANCE</button>
-</div>
+</div>-->
 <div>
     <router-outlet>
-		<table class="table table-condensed table-striped table-hover">
+		<!--<table class="table table-condensed table-striped table-hover">
 			<tr>
 				<th>type client</th>
 				<th>info client</th>
 				<th>montant</th>
 				<th>limite</th>
 			</tr>
-		</table>
+			</table>-->
+			<p><i><b style="font-size:2em;text-align:center">Module en Cour de Developpement</b></i></p>
     </router-outlet>
 </div>
 
