--- a/src/app/stock/stock.component.css
+++ b/src/app/stock/stock.component.css
@@ -1,4 +1,4 @@
-a:hover{
+/*a:hover{
     cursor: pointer;
     background-color:white;
     color:green !important;
@@ -23,4 +23,41 @@ li a{
 .activeMenu{
     background-color: white;
     color: green;
+}
+
+
+#om-options a{
+    border-radius: 1rem 0rem 1rem 1rem;
+    padding: 1.3rem;
+    color : #F39200 ;
+    margin-right: 2rem ;
+    background-color: white ;
+    border : 2px solid #F39200;
+}
+
+#om-options a:hover{
+    color : white ;
+    background-color: #36A9E0 ;
+    text-decoration: none ;
+}
+
+#om-options a:focus{
+    color : white ;
+    background-color: #36A9E0 ;
+    text-decoration: none ;
+}*/
+.inputcloud{
+  border-radius:10px 10px 10px 10px;
+  margin-left:2em;
+}
+.lien{
+    padding:0.5em;
+    cursor:pointer;
+    border-radius:10px 10px 10px 10px;
+    color:white;
+    background-color:green;
+}
+.lien:hover{
+   color:green;
+   background-color:White;
 }
